fix line overlap on small screens for modal titles

--- a/style.css
+++ b/style.css
@@ -492,14 +492,14 @@ body.modal-open-mobile{
   text-align: center;
   font-size: 20px;
   font-weight: bold;
-  line-height: .5em
+  line-height: 1em
 }
 
 .project-modal-date{
   text-align: center;
   font-size: 18px;
   font-style: italic;
-  line-height: .5em
+  line-height: .25em
 }
 
 .divider-line{
@@ -579,6 +579,7 @@ body.modal-open-mobile{
 
   .project-modal-container{
     transform: translate(-50%, -50%);
+    width: 1000px;
   }
 }
 
